# YATB

./: .env-example  Cargo.toml  README.md
src/: main.rs
src/db/: db.rs  db_utils.rs  mod.rs
src/utils/: consts.rs  custom_types.rs  mod.rs
