[package]
name = "YATB"
authors = ["Rh4096"]
version = "0.1.0"
edition = "2021"

[dependencies]
async_once = "0.2.6"
lazy_static = "1.4.0"
anyhow = "1.0.75"
teloxide = {version = "0.12.2", features = ["auto-send", "macros"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
chrono = "0.4.31"
log = "0.4.20"
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
regex = "1.10.2"
mime = "0.3.17"
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros","time"] }
tokio-stream = "0.1.14"
mongodb = "2.8.0"